--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 class="fab fa-facebook-f"></i></a>
         <a href="#" class="bg-emerald-500 text-white p-2 rounded-r hover:bg-emerald-600 transition"><i
                 class="fab fa-twitter"></i></a>
-        <a href="#" class="bg-emerald-500 text-white p-2 rounded-r hover:bg-emerald-600 transition"><i
+        <a href="https://www.instagram.com/themide_foundation?igsh=MXcybGxuOTAwMmthbA%3D%3D" class="bg-emerald-500 text-white p-2 rounded-r hover:bg-emerald-600 transition"><i
                 class="fab fa-instagram"></i></a>
     </div>
 
@@ -353,7 +353,7 @@
                                 class="fab fa-facebook-f"></i></a>
                         <a href="#" class="hover:text-peach-300 transition duration-300"><i
                                 class="fab fa-twitter"></i></a>
-                        <a href="#" class="hover:text-peach-300 transition duration-300"><i
+                        <a href="https://www.instagram.com/themide_foundation?igsh=MXcybGxuOTAwMmthbA%3D%3D" class="hover:text-peach-300 transition duration-300"><i
                                 class="fab fa-instagram"></i></a>
                         <a href="#" class="hover:text-peach-300 transition duration-300"><i
                                 class="fab fa-linkedin-in"></i></a>
@@ -459,5 +459,6 @@
         };
     </script>
 </body>
+
 
 </html>
